[project]
name = "delight-rap-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.0.7",
    "httpx>=0.28.1",
    "langchain==0.3.23",
    "langchain-community==0.3.21",
    "langchain-core==0.3.54",
    "langchain-text-splitters==0.3.8",
    "mcp[cli]>=1.6.0",
    "sentence-transformers==4.1.0",
]
